lisätty juniin saapumisaika ja matkan kesto, muotoiltu printti nätiksi. Laitettu junan ehtoihin, että pitää olla commercial stop.